/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.4.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'com.gradleup.shadow' version '8.3.0'}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    compileOnly 'org.apache.flink:flink-streaming-java:1.17.0'
    compileOnly 'org.apache.flink:flink-clients:1.17.0'

    // Connectors (Must be bundled in the JAR, so we use implementation)
    implementation 'org.apache.flink:flink-connector-kafka:1.17.0'
    // Jackson for JSON parsing
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11) // DOWNGRADED TO 11
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.StreamingJob'
}

run {
    jvmArgs = [
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
    ]
}

shadowJar {
    manifest {
        attributes 'Main-Class': 'org.example.StreamingJob'
    }
}
